Bugfix: negative spacings removed

--- a/examples/playground.tex
+++ b/examples/playground.tex
@@ -26,7 +26,7 @@ Este Acuerdo define los términos de cooperación. Demuestra párrafos bilingüe
   \itemBilingual{Both parties agree on timelines.}{Ambas partes acuerdan los plazos.}
 \end{enumerateBilingual}
 
-\BilingualSubsectionCondensed{Compact Lists}{Listas compactas}
+\BilingualSubsection{Compact Lists}{Listas compactas}
 \begin{itemizeBilingual}
   \itemBilingual{Bullet on the left}{Viñeta a la derecha}
   \itemBilingual{Second bullet}{Segunda viñeta}
